--- a/templates/base.html
+++ b/templates/base.html
@@ -473,7 +473,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="btn btn-primary ms-2" href="{% url 'accounts:register' %}">
-                                <i class="fas fa-user-plus me-1"></i>Join Now
+                                <i class="fas fa-user-plus me-1"></i>Register
                             </a>
                         </li>
                     {% endif %}
@@ -533,7 +533,7 @@
                     <!-- Copyright -->
                     <div class="border-top pt-3">
                         <p class="mb-0 opacity-75">
-                            &copy; 2024 Pool Portal. All rights reserved.
+                            &copy; 2025 Pool Portal. All rights reserved.
                         </p>
                     </div>
                 </div>
