--- a/templates/events/event_list.html
+++ b/templates/events/event_list.html
@@ -54,7 +54,7 @@
                                 {% if not user.is_authenticated %}
                                     <div class="card-footer bg-transparent border-0">
                                         <a href="{% url 'accounts:register' %}" class="btn btn-primary w-100">
-                                            Join to Participate
+                                            Register to Participate
                                         </a>
                                     </div>
                                 {% endif %}
