--- a/templates/home.html
+++ b/templates/home.html
@@ -16,6 +16,13 @@
                 </div>
                 <div class="hero-slideshow">
                     <div class="hero-slide active" style="background-image: url('{% static "images/pool8.jpg" %}');"></div>
+                    <div class="hero-slide" style="background-image: url('{% static "images/pool1.jpg" %}');"></div>
+                    <div class="hero-slide" style="background-image: url('{% static "images/pool2.jpg" %}');"></div>
+                    <div class="hero-slide" style="background-image: url('{% static "images/pool3.jpg" %}');"></div>
+                    <div class="hero-slide" style="background-image: url('{% static "images/pool4.jpg" %}');"></div>
+                    <div class="hero-slide" style="background-image: url('{% static "images/pool5.jpg" %}');"></div>
+                    <div class="hero-slide" style="background-image: url('{% static "images/pool6.jpg" %}');"></div>
+                    <div class="hero-slide" style="background-image: url('{% static "images/pool7.jpg" %}');"></div>
                     <div class="hero-slide" style="background-image: url('{% static "images/pool9.jpg" %}');"></div>
                     <div class="hero-slide" style="background-image: url('{% static "images/pool12.jpg" %}');"></div>
                 </div>
